<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/imagen1" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="145dp" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="202dp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="text"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="262dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:ems="10"
        android:hint="@string/password"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="321dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="228dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="410dp" />


</LinearLayout>