<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_activity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/grupo2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_weight="1"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btn_antojitos"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_padding"
        android:layout_marginEnd="@dimen/menu_buttons_margin"
        android:textSize="@dimen/menu_buttons_text"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/antojitos" />
    <Button
        android:id="@+id/btn_especialidades"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_padding"
        android:layout_marginEnd="@dimen/menu_buttons_margin"
        android:textSize="@dimen/menu_buttons_text"
        android:layout_gravity="fill_horizontal"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/especialidades" />

    <Button
        android:id="@+id/btn_combinations"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_padding"
        android:layout_marginEnd="@dimen/menu_buttons_margin"
        android:textSize="@dimen/menu_buttons_text"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/combinaciones" />

    <Button
        android:id="@+id/btn_tortas"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_padding"
        android:layout_marginEnd="@dimen/menu_buttons_margin"
        android:textSize="@dimen/menu_buttons_text"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/tortas" />

    <Button
        android:id="@+id/btn_sopas"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_padding"
        android:layout_marginEnd="@dimen/menu_buttons_margin"
        android:textSize="@dimen/menu_buttons_text"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/sopas" />

    <Button
        android:id="@+id/btn_drinks"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_padding"
        android:layout_marginEnd="@dimen/menu_buttons_margin"
        android:textSize="@dimen/menu_buttons_text"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/drinks" />


</GridLayout>